[cmake] use LIGHTTPD_MODULES_DIR as relative path (fixes #3185)
(thx brad)

x-ref:
  "CMake: issue with modules path"
  https://redmine.lighttpd.net/issues/3185

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -805,11 +805,10 @@ set(LIGHTTPD_VERSION_ID 0x104${PROJECT_VERSION_PATCH})
 set(PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
 set(PACKAGE_VERSION "${PROJECT_VERSION}")
 
-if(NOT LIGHTTPD_MODULES_DIR)
-	set(LIGHTTPD_MODULES_DIR "${CMAKE_INSTALL_FULL_LIBDIR}/lighttpd")
-endif()
-
 if(NOT WIN32)
+	if(NOT LIGHTTPD_MODULES_DIR)
+		set(LIGHTTPD_MODULES_DIR "${CMAKE_INSTALL_LIBDIR}/lighttpd")
+	endif()
 	set(LIGHTTPD_LIBRARY_DIR "${CMAKE_INSTALL_PREFIX}/${LIGHTTPD_MODULES_DIR}")
 else()
 	## We use relative path in windows
@@ -1218,8 +1217,8 @@ endif()
 if(NOT WIN32)
 install(TARGETS ${L_INSTALL_TARGETS}
 	RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}
-	LIBRARY DESTINATION ${LIGHTTPD_MODULES_DIR}
-	ARCHIVE DESTINATION ${LIGHTTPD_MODULES_DIR}/static)
+	LIBRARY DESTINATION ${LIGHTTPD_LIBRARY_DIR}
+	ARCHIVE DESTINATION ${LIGHTTPD_LIBRARY_DIR}/static)
 else()
 ## HACK to make win32 to install our libraries in desired directory..
 install(TARGETS lighttpd
