[autotools] fix typo in -I used --with-pcre2=/path (fixes #3190)
(thx giliy)

x-ref:
  "[PATCH] --with-pcre2 configured to incorrect path"
  https://redmine.lighttpd.net/issues/3190

--- a/configure.ac
+++ b/configure.ac
@@ -890,7 +890,7 @@ AC_MSG_RESULT([$WITH_PCRE2])
 if test "$WITH_PCRE2" != no && test "$WITH_PCRE" = "no"; then
   if test "$WITH_PCRE2" != yes; then
     PCRE_LIB="-L$WITH_PCRE2/lib -lpcre2-8"
-    CPPFLAGS="$CPPFLAGS -I$WITH_PCRE/include"
+    CPPFLAGS="$CPPFLAGS -I$WITH_PCRE2/include"
   else
     PKG_CHECK_MODULES([PCRE2],[libpcre2-8],[
       PCRE_LIB="$PCRE2_LIBS"
