[autotools] chmod u+w configparser.c for lemon
chmod u+w configparser.c for lemon

configparser.c might be created mode 444 and then a subsequent
repeat call to lemon will fail EACCES

This fixes that scenario in top level ./packdist.sh script.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,6 +40,7 @@ versionstamp:
 configparser.h: configparser.c
 configparser.c: $(srcdir)/configparser.y $(srcdir)/lempar.c lemon$(BUILD_EXEEXT)
 	rm -f configparser.h
+	chmod u+w $(srcdir)/configparser.c 2>/dev/null || true
 	$(LEMON) -q -T$(srcdir)/lempar.c $(srcdir)/configparser.y
 
 parsers: configparser.c
