--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -927,12 +927,23 @@ set(SERVER_SRC
 	configparser.c
 )
 
+if(WIN32 AND NOT BUILD_STATIC)
+set(COMMON_SRC ${COMMON_SRC} mod_auth_api.c mod_vhostdb_api.c)
 add_executable(lighttpd ${SERVER_SRC} ${COMMON_SRC} ${BUILTIN_MODS})
+SET_TARGET_PROPERTIES(lighttpd PROPERTIES ENABLE_EXPORTS ON)
+SET_TARGET_PROPERTIES(lighttpd PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
+else()
+add_executable(lighttpd ${SERVER_SRC} ${COMMON_SRC} ${BUILTIN_MODS})
+endif()
 set(L_INSTALL_TARGETS ${L_INSTALL_TARGETS} lighttpd)
 
 add_and_install_library(mod_accesslog mod_accesslog.c)
 add_and_install_library(mod_ajp13 mod_ajp13.c)
+if(WIN32 AND NOT BUILD_STATIC)
+add_and_install_library(mod_auth "mod_auth.c")
+else()
 add_and_install_library(mod_auth "mod_auth.c;mod_auth_api.c")
+endif()
 add_and_install_library(mod_authn_file "mod_authn_file.c")
 add_and_install_library(mod_cgi mod_cgi.c)
 add_and_install_library(mod_deflate mod_deflate.c)
@@ -945,7 +956,11 @@ add_and_install_library(mod_sockproxy mod_sockproxy.c)
 add_and_install_library(mod_ssi mod_ssi.c)
 add_and_install_library(mod_status mod_status.c)
 add_and_install_library(mod_userdir mod_userdir.c)
+if(WIN32 AND NOT BUILD_STATIC)
+add_and_install_library(mod_vhostdb "mod_vhostdb.c")
+else()
 add_and_install_library(mod_vhostdb "mod_vhostdb.c;mod_vhostdb_api.c")
+endif()
 add_and_install_library(mod_webdav mod_webdav.c)
 add_and_install_library(mod_wstunnel mod_wstunnel.c)
 
