Fixed bad documentation pointer

--- a/doc/config/conf.d/access_log.conf
+++ b/doc/config/conf.d/access_log.conf
@@ -13,7 +13,8 @@ accesslog.filename          = log_root + "/access.log"
 
 ##
 ## The default format produces CLF compatible output.
-## For available parameters see access.txt 
+## For available parameters see
+## https://wiki.lighttpd.net/mod_accesslog
 ##
 #accesslog.format = "%h %l %u %t \"%r\" %b %>s \"%{User-Agent}i\" \"%{Referer}i\""
 
