[scons] fix static build to include builtin_mods

--- a/src/SConscript
+++ b/src/SConscript
@@ -183,6 +183,9 @@ staticsrc = src + common_src
 
 staticlib = copy(env['LIBS'])
 staticinit = ''
+staticsrc += builtin_mods
+for module in builtin_mods:
+	staticinit += "PLUGIN_INIT(%s)\n"%module[0:-2]
 for module in modules.keys():
 	staticsrc += modules[module]['src']
 	staticinit += "PLUGIN_INIT(%s)\n"%module
