[mod_h2] HTTP/2 module: mod_h2
(mod_h2 module now available as build artifact of shared lib build,
 but is not yet used by lighttpd, in order to give package maintainers
 a chance to update release packages to contain mod_h2)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -909,6 +909,7 @@ endif()
 add_and_install_library(mod_deflate mod_deflate.c)
 add_and_install_library(mod_dirlisting mod_dirlisting.c)
 add_and_install_library(mod_extforward mod_extforward.c)
+add_and_install_library(mod_h2 "h2.c;ls-hpack/lshpack.c;algo_xxhash.c")
 add_and_install_library(mod_proxy mod_proxy.c)
 add_and_install_library(mod_rrdtool mod_rrdtool.c)
 add_and_install_library(mod_sockproxy mod_sockproxy.c)
@@ -1096,6 +1097,7 @@ endif()
 
 if(HAVE_XXHASH)
 	target_link_libraries(lighttpd xxhash)
+	target_link_libraries(mod_h2   xxhash)
 	target_link_libraries(test_mod xxhash)
 endif()
 
