--- a/src/meson.build
+++ b/src/meson.build
@@ -136,6 +136,8 @@ functions = {
   'mmap': 'sys/mman.h',
   'pipe2': 'unistd.h',
   'poll': 'poll.h',
+  'posix_spawn': 'spawn.h',
+  'posix_spawn_file_actions_addfchdir_np': 'spawn.h',
   'pread': 'unistd.h',
   'preadv': 'sys/uio.h',
   'pwrite': 'unistd.h',
