[meson] update comment with build flags

--- a/meson.build
+++ b/meson.build
@@ -18,7 +18,7 @@ subdir('tests')
 # $ ninja
 
 # full build:
-# $ meson configure -D build_extra_warnings=true -D buildtype=debugoptimized -D with_bzip=enabled -D with_dbi=enabled -D with_fam=enabled -D with_krb5=enabled -D with_ldap=enabled -D with_libunwind=enabled -D with_lua=true -D with_mysql=enabled -D with_openssl=true -D with_pcre2=true -D with_pgsql=enabled -D with_sasl=enabled -D with_webdav_locks=enabled -D with_webdav_props=enabled -D with_xattr=true -D with_zlib=enabled
+# $ meson configure -D build_extra_warnings=true -D buildtype=debugoptimized -D with_brotli=enabled -D with_dbi=enabled -D with_krb5=enabled -D with_ldap=enabled -D with_libunwind=enabled -D with_lua=true -D with_mysql=enabled -D with_openssl=true -D with_pcre2=true -D with_pgsql=enabled -D with_sasl=enabled -D with_webdav_locks=enabled -D with_webdav_props=enabled -D with_xattr=true -D with_zlib=enabled -D with_zstd=enabled
 
 # optimized build:
 # $ meson configure -D b_lto=true -D buildtype=debugoptimized
