[core] posix_spawn_file_actions_addclosefrom_np()
use posix_spawn_file_actions_addclosefrom_np() where available

--- a/configure.ac
+++ b/configure.ac
@@ -1462,6 +1462,7 @@ AC_CHECK_FUNCS([\
   pipe2 \
   poll \
   posix_spawn \
+  posix_spawn_file_actions_addclosefrom_np \
   posix_spawn_file_actions_addfchdir_np \
   pread \
   pwrite \
