[mod_magnet] fix static build using autoconf (fixes #3203)
(thx desmana)

missing algo_hmac.c from static build
(since removal of mod_secdownload in lighttpd 1.4.68)

x-ref:
  "static build fails due to missing algo_hmac"
  https://redmine.lighttpd.net/issues/3203

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -433,8 +433,7 @@ lighttpd_SOURCES += mod_maxminddb.c
 lighttpd_LDADD += $(MAXMINDDB_LIB)
 endif
 if BUILD_WITH_LUA
-lighttpd_SOURCES += mod_magnet.c mod_magnet_cache.c
-                    #algo_hmac.c
+lighttpd_SOURCES += mod_magnet.c mod_magnet_cache.c algo_hmac.c
 lighttpd_CPPFLAGS += $(LUA_CFLAGS)
 lighttpd_LDADD += $(LUA_LIBS) -lm
 endif
