--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1005,6 +1005,7 @@ add_executable(test_common
 	t/test_burl.c
 	t/test_http_header.c
 	t/test_http_kv.c
+	t/test_http_range.c
 	t/test_keyvalue.c
 	t/test_request.c
 	log.c
