--- a/src/meson.build
+++ b/src/meson.build
@@ -700,6 +700,7 @@ test('test_common', executable('test_common',
 		't/test_burl.c',
 		't/test_http_header.c',
 		't/test_http_kv.c',
+		't/test_http_range.c',
 		't/test_keyvalue.c',
 		't/test_request.c',
 		'log.c',
