[autotools] report if ipv6 support disabled (fixes #3237)
x-ref:
  "./configure --disable-ipv6 prints "Features: enabled: network-ipv6""
  https://redmine.lighttpd.net/issues/3237

--- a/configure.ac
+++ b/configure.ac
@@ -1793,7 +1793,7 @@ lighty_track_feature "auth-crypt" "" \
   'test "$found_crypt" != no'
 
 lighty_track_feature "network-ipv6" "" \
-  'test "$ac_cv_ipv6_support" != no'
+  'test "$ipv6" != false'
 
 lighty_track_feature "large-files" "" \
   'test "$ENABLE_LFS" = yes'
