[build] -D_LARGEFILE64_SOURCE for musl sendfile64()
-D_LARGEFILE64_SOURCE for sendfile64() on musl libc

(detected by autoconf and meson)
(might not be detected by CMake or SCONS with musl libc due to lighttpd
CMakeLists.txt and SConstruct checking for sendfile64 symbol but musl
libc sys/sendfile.h #define sendfile64 sendfile)

History:
(On linux 2.4.x you get either sendfile or LFS.)
On some ancient systems without large file support 32-bit off_t
might cause surpising behavior with sendfile() attempt on large files
(if not detecting incompatibility of using 32-bit off_t to try to
sendfile() a file larger than 2 GB).

lighttpd 1.4.67 and later always builds with large file support
with autoconf, ignoring the historical option --disable-lfs.
Builds using SCONS, CMake, and meson have been configured to use
large file support for much longer by not providing the option to
disable lfs support.

x-ref:
  Q: Do I need to define _LARGEFILE64_SOURCE to get 64bit off_t?
  https://wiki.musl-libc.org/faq.html#Q:-Do-I-need-to-define-%3Ccode%3E_LARGEFILE64_SOURCE%3C/code%3E-to-get-64bit-%3Ccode%3Eoff_t%3C/code%3E?

--- a/src/meson.build
+++ b/src/meson.build
@@ -12,6 +12,7 @@ defs = [
 	'-D_TIME_BITS=64',
 	'-D_FILE_OFFSET_BITS=64',
 	'-D_LARGEFILE_SOURCE',
+	'-D_LARGEFILE64_SOURCE',
 	'-D_LARGE_FILES',
 	'-D_DEFAULT_SOURCE',
 	'-D_GNU_SOURCE',
@@ -143,7 +144,7 @@ functions = {
   'preadv': 'sys/uio.h',
   'pwrite': 'unistd.h',
   'pwritev': 'sys/uio.h',
-  'sendfile64': 'sys/socket.h',
+  'sendfile64': 'sys/sendfile.h',
   'sendfile': 'sys/sendfile.h',
   'sigaction': 'signal.h',
   'signal': 'signal.h',
