[core] chunk_file_pread_chunk()
attempt to reduce blocking I/O by using preadv2 RWF_NOWAIT on Linux
(and fall back to chunk_file_pread() on other platforms)

If reading would block, lighttpd will go do work on other connections.
When lighttpd gets back around to trying again, then on the next
attempt, lighttpd will omit the flag and preadv2() may block waiting
for disk read, as was done before.  This is to avoid spinning on CPU
while waiting for disk.

--- a/configure.ac
+++ b/configure.ac
@@ -1481,7 +1481,7 @@ AC_CHECK_HEADERS([sys/event.h],      [AC_CHECK_FUNCS([kqueue])])
 AC_CHECK_HEADERS([sys/mman.h],       [AC_CHECK_FUNCS([mmap])])
 AC_CHECK_HEADERS([sys/random.h],     [AC_CHECK_FUNCS([getentropy])])
 AC_CHECK_HEADERS([sys/resource.h],   [AC_CHECK_FUNCS([getrlimit])])
-AC_CHECK_HEADERS([sys/uio.h],        [AC_CHECK_FUNCS([preadv pwritev writev])])
+AC_CHECK_HEADERS([sys/uio.h],        [AC_CHECK_FUNCS([preadv preadv2 pwritev writev])])
 if test "$ac_cv_func_poll" = no; then
   AC_CHECK_HEADERS([sys/select.h])
   AC_CHECK_FUNCS([select])
