--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -199,6 +199,7 @@ endif()
 check_include_files(sys/uio.h HAVE_SYS_UIO_H)
 if(HAVE_SYS_UIO_H)
 check_function_exists(preadv HAVE_PREADV)
+check_function_exists(preadv2 HAVE_PREADV2)
 check_function_exists(pwritev HAVE_PWRITEV)
 check_function_exists(writev HAVE_WRITEV)
 endif()
