[cmake] check for sendfile64 only on Linux

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -231,6 +231,12 @@ check_function_exists(sendfilev HAVE_SENDFILEV)
 check_function_exists(setpflags HAVE_SETPFLAGS)
 endif()
 
+if(LINUX)
+set(CMAKE_REQUIRED_DEFINITIONS "-D_LARGEFILE64_SOURCE")
+check_symbol_exists(sendfile64 "sys/sendfile.h" HAVE_SENDFILE64)
+set(CMAKE_REQUIRED_DEFINITIONS)
+endif()
+
 check_type_size(long SIZEOF_LONG)
 check_type_size(off_t SIZEOF_OFF_T)
 
@@ -251,7 +257,6 @@ check_function_exists(pipe2 HAVE_PIPE2)
 check_function_exists(pread HAVE_PREAD)
 check_function_exists(pwrite HAVE_PWRITE)
 check_function_exists(sendfile HAVE_SENDFILE)
-check_function_exists(sendfile64 HAVE_SENDFILE64)
 check_function_exists(splice HAVE_SPLICE)
 check_function_exists(srandom HAVE_SRANDOM)
 check_function_exists(strerror_r HAVE_STRERROR_R)
