--- a/src/meson.build
+++ b/src/meson.build
@@ -748,6 +748,7 @@ test('test_mod', executable('test_mod',
 		't/test_mod_access.c',
 		't/test_mod_alias.c',
 		't/test_mod_evhost.c',
+		't/test_mod_expire.c',
 		't/test_mod_indexfile.c',
 		't/test_mod_simple_vhost.c',
 		't/test_mod_ssi.c',
