--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -522,6 +522,7 @@ t_test_mod_SOURCES = $(common_src) t/test_mod.c \
                      t/test_mod_access.c \
                      t/test_mod_alias.c \
                      t/test_mod_evhost.c \
+                     t/test_mod_expire.c \
                      t/test_mod_indexfile.c \
                      t/test_mod_simple_vhost.c \
                      t/test_mod_ssi.c \
