--- a/configure.ac
+++ b/configure.ac
@@ -1467,7 +1467,6 @@ AC_CHECK_FUNCS([\
   pread \
   pwrite \
   sendfile \
-  sendfile64 \
   splice \
   srandom \
   strerror_r \
@@ -1538,7 +1537,7 @@ AC_ARG_ENABLE([lfs],
 )
 AC_MSG_RESULT([$ENABLE_LFS])
 if test "$ENABLE_LFS" = yes; then
-  CPPFLAGS="${CPPFLAGS} -D_TIME_BITS=64 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_LARGE_FILES -D_DEFAULT_SOURCE"
+  CPPFLAGS="${CPPFLAGS} -D_TIME_BITS=64 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGE_FILES -D_DEFAULT_SOURCE"
   AC_SYS_LARGEFILE
 fi
 
