--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -10,20 +10,19 @@ jobs:
 
   Ubuntu-gcc:
     runs-on: ubuntu-latest
-    name: Linux-GCC${{matrix.cxx}}-deps=${{matrix.deps}}
+    name: Linux-GCC-deps=${{matrix.deps}}
     strategy:
       matrix:
-        cxx: ['11']
         deps: ['enabled', 'disabled']
     steps:
       - uses: actions/checkout@v4
+      - uses: egor-tensin/setup-gcc@v1
+        with:
+          version: '13'
       - name: Install packages
         run: |
-          sudo apt install -y g++-${{matrix.cxx}}
           python3 -m pip install meson ninja
       - name: Compile and Test
-        env:
-          CXX: g++-${{matrix.cxx}}
         run: |
           meson setup "${{github.workspace}}/build" -Dauto_features=${{matrix.deps}} -Dwarning_level=3
           meson compile -C "${{github.workspace}}/build" --verbose
@@ -31,22 +30,19 @@ jobs:
 
   Ubuntu-clang:
     runs-on: ubuntu-latest
-    name: Linux-Clang${{matrix.cxx}}-deps=${{matrix.deps}}
+    name: Linux-Clang-deps=${{matrix.deps}}
     strategy:
       matrix:
-        cxx: ['14']
         deps: ['enabled', 'disabled']
     steps:
       - uses: actions/checkout@v4
+      - uses: egor-tensin/setup-clang@v1
+        with:
+          version: '17'
       - name: Install packages
         run: |
-          sudo apt install -y clang-${{matrix.cxx}} libc++abi-${{matrix.cxx}}-dev libc++-${{matrix.cxx}}-dev lld-${{matrix.cxx}}
           python3 -m pip install meson ninja
       - name: Compile and Test
-        env:
-          CXX: clang++-${{matrix.cxx}}
-          CXXFLAGS: -stdlib=libc++
-          CXX_LD: lld-${{matrix.cxx}}
         run: |
           meson setup "${{github.workspace}}/build" -Dauto_features=${{matrix.deps}} -Dwarning_level=3
           meson compile -C "${{github.workspace}}/build" --verbose
